--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ sudo: false
 language: ruby
 rvm:
   - 2.6.1
-before_install: gem install bundler -v 1.16.1
+before_install: gem install bundler -v 2.0.1
+script:
+  - bundle exec rspec
+  - bundle exec mutant --include lib --require operation --use rspec Operation
